[tool.poetry]
name = "venv-poetry-poc"
version = "0.1.0"
description = "A simple PoC project for using pyenv, venv, and poetry to manage dependencies and python versions"
authors = ["Tyler Matteo <tylermatteo434@gmail.com>"]
readme = "README.md"
packages = [{include = "venv_poetry_poc"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
