[tool.poetry]
name = "venv-poetry-poc"
version = "0.1.0"
description = "A simple PoC project for using pyenv, venv, and poetry to manage dependencies and python versions"
authors = ["Tyler Matteo <tylermatteo434@gmail.com>"]
readme = "README.md"
packages = [{include = "venv_poetry_poc"}]

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pylint = "^2.15.9"
isort = "^5.11.4"
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
